--- a/ImagePicker/ImagePicker/Base.lproj/Main.storyboard
+++ b/ImagePicker/ImagePicker/Base.lproj/Main.storyboard
@@ -6,6 +6,119 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Tab Bar Controller-->
+        <scene sceneID="WRz-0U-eSS">
+            <objects>
+                <tabBarController id="UNs-Fh-z2S" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="okE-oG-UZK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="WdP-FV-mLo" kind="relationship" relationship="viewControllers" id="vSa-Fw-RKl"/>
+                        <segue destination="lNk-vb-e7z" kind="relationship" relationship="viewControllers" id="h4w-K2-OHB"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SIo-Df-FZA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2115" y="457.5"/>
+        </scene>
+        <!--Collection-->
+        <scene sceneID="Eaa-3m-sRw">
+            <objects>
+                <navigationController id="lNk-vb-e7z" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Collection" id="0Oi-LB-fdK"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nGc-kV-YgG">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="pT0-TM-Sb6" kind="relationship" relationship="rootViewController" id="czp-dX-ubN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I4u-8o-FTK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-969" y="699"/>
+        </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="ZNl-vR-vKv">
+            <objects>
+                <collectionViewController id="pT0-TM-Sb6" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="CJA-aR-aSe">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Qo7-qO-ScA">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="aYa-dX-qtS">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="pT0-TM-Sb6" id="g54-0R-vMx"/>
+                            <outlet property="delegate" destination="pT0-TM-Sb6" id="zUZ-mC-Rbk"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="v7Y-DD-6yH"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FSw-gF-eCv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-39" y="699"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="NF1-4Q-BNM">
+            <objects>
+                <tableViewController id="g1i-oe-3Fn" customClass="tableView" customModule="ImagePicker" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="GUo-qC-ceh">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="pzg-W0-yhl" customClass="memeCell">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pzg-W0-yhl" id="OiZ-NG-yCE">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="g1i-oe-3Fn" id="Uhl-rn-uAg"/>
+                            <outlet property="delegate" destination="g1i-oe-3Fn" id="szr-Tw-nOM"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="Qtj-Ov-x0r"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DUR-Ej-0qn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-39" y="-37.5"/>
+        </scene>
+        <!--Table-->
+        <scene sceneID="nJZ-DB-FfJ">
+            <objects>
+                <navigationController id="WdP-FV-mLo" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Table" id="Rd2-Qf-ONU"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oQf-t8-G2Y">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="g1i-oe-3Fn" kind="relationship" relationship="rootViewController" id="O2r-up-hQJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ket-i1-Kfi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-969" y="-37.5"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="BII-4w-Yeh">
             <objects>
@@ -117,12 +230,13 @@
                         <outlet property="bottom" destination="MUT-ja-DIM" id="0nl-j2-R9z"/>
                         <outlet property="cameraButton" destination="BJV-H3-A06" id="Cbh-32-6Vz"/>
                         <outlet property="imagePickerView" destination="sJj-e0-aZg" id="MqY-nM-m0X"/>
+                        <outlet property="toolBar" destination="B9E-b6-zoK" id="RY0-4y-BYN"/>
                         <outlet property="top" destination="nzc-aN-NbG" id="dYc-it-4xb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pxR-WW-bsv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="21" y="378"/>
+            <point key="canvasLocation" x="1281" y="381"/>
         </scene>
     </scenes>
 </document>
